change data structure, add task groups

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-    <h1 id="title">MangoList</h1>
+    <h1 id="title">
+        <span id="title-mango">Mango</span><span id="title-list">List</span>
+    </h1>
 
     <!--<div id="sign-in">
         <input type="email" id="email-input">
@@ -40,6 +42,11 @@
             </button>
         </div>
         
+        <input type="text" id="group-input">
+        <button id="create-group">
+            Create group
+        </button>
+
         <div id="task-area"></div>
     </div>
 
