add tasks to groups and delete groups

--- a/index.html
+++ b/index.html
@@ -37,15 +37,22 @@
         <div id="new-task-container">
             <input type="text" id="task-input">
 
-            <button id="create-task">
-                <i class="material-icons">add_task</i>
+            <button id="create-task" class="material-icons">
+                create_new_folder
             </button>
         </div>
         
-        <input type="text" id="group-input">
+        <!--<input type="text" id="group-input">
         <button id="create-group">
             Create group
-        </button>
+        </button>-->
+        <div id="main-group" class="task-group">
+            <h2></h2>
+            <ul>
+                <li></li>
+            </ul>
+            
+        </div>
 
         <div id="task-area"></div>
     </div>
