--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
             Create group
         </button>-->
         <div id="main-group" class="task-group">
-            <h2></h2>
+            <h2>
+                <span></span>
+            </h2>
             <ul>
                 <li></li>
             </ul>
-            
+            <div class="hint-add-task"></div>
         </div>
 
         <div id="task-area"></div>
