--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <main>
     <h1 id="title">
         <span id="title-mango">Mango</span><span id="title-list">List</span>
     </h1>
@@ -58,6 +59,15 @@
 
         <div id="task-area"></div>
     </div>
+    </main>
+
+      <footer>
+        
+    <p>Group and keep track of your to-dos delightfully</p>
+    <p>Named after my dog Mango</p>
+    <p>By Ken Zhou</p>
+
+      </footer>
 
     
 
